// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorSummary all matches snapshot 1`] = `
<ErrorSummary
  className=""
  description="Optional description of the errors and how to correct them"
  role="alert"
  tabIndex="-1"
  title="This is a problem"
>
  <div
    className="nhsuk-error-summary"
    role="alert"
    tabIndex="-1"
  >
    <h2
      className="nhsuk-error-summary__title"
    >
      This is a problem
    </h2>
    <div
      className="nhsuk-error-summary__body"
    >
      <p>
        Optional description of the errors and how to correct them
      </p>
      <ul
        className="nhsuk-list nhsuk-error-summary__list"
      >
        <ErrorItem
          className=""
          href="#example-error-1"
          id=""
          onClick={[Function]}
        >
          <li
            id=""
          >
            <a
              href="#example-error-1"
              id="null"
              onClick={[Function]}
            >
              Link to error with explanation
            </a>
          </li>
        </ErrorItem>
        <ErrorItem
          className=""
          href="#example-error-2"
          id=""
          onClick={[Function]}
        >
          <li
            id=""
          >
            <a
              href="#example-error-2"
              id="null"
              onClick={[Function]}
            >
              Link to error with explanation
            </a>
          </li>
        </ErrorItem>
      </ul>
    </div>
  </div>
</ErrorSummary>
`;

exports[`ErrorSummary doesn't render description or title when not provided 1`] = `
<ErrorSummary
  className=""
  description=""
  role="alert"
  tabIndex="-1"
>
  <div
    className="nhsuk-error-summary"
    role="alert"
    tabIndex="-1"
  >
    <h2
      className="nhsuk-error-summary__title"
    />
    <div
      className="nhsuk-error-summary__body"
    >
      <ul
        className="nhsuk-list nhsuk-error-summary__list"
      >
        <ErrorItem
          className=""
          href="#example-error-1"
          id=""
          onClick={[Function]}
        >
          <li
            id=""
          >
            <a
              href="#example-error-1"
              id="null"
              onClick={[Function]}
            >
              Link to error with explanation
            </a>
          </li>
        </ErrorItem>
        <ErrorItem
          className=""
          href="#example-error-2"
          id=""
          onClick={[Function]}
        >
          <li
            id=""
          >
            <a
              href="#example-error-2"
              id="null"
              onClick={[Function]}
            >
              Link to error with explanation
            </a>
          </li>
        </ErrorItem>
      </ul>
    </div>
  </div>
</ErrorSummary>
`;

exports[`ErrorSummary item matches snapshot 1`] = `
<li
  id=""
>
  <a
    href="#"
    id="null"
    onClick={[Function]}
  >
    Error item
  </a>
</li>
`;
